--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CARRUDO</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/Screen.min.css">
+    <link rel="stylesheet" href="assets/css/Screen.css">
 </head>
 
 <body>
